--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,6 +3,7 @@
     <string name="sign_in_button">sign in</string>
     <string name="sign_up_button">sign up</string>
     <string name="pick_date_button">birthdate</string>
+    <string name="submit_changes">submit changes</string>
     <string name="sign_up_complete_button">complete sign up</string>
     <string name="tweet_button">tweet</string>
     <string name="follow_button">follow</string>
@@ -28,8 +29,7 @@
 
     <string name="unfollow_success">user unfollowed successfully</string>
     <string name="not_followed">you are not following this user</string>
-
-
+    <string name="retweeted_by">Retweeted by %1$s</string>
 
     <string name="username_or_email_field_hint"><font size="30">username or email</font></string>
     <string name="password_field_hint"><font size="30">password</font></string>
@@ -40,6 +40,10 @@
     <string name="tweet_field_hint">what\'s happening?</string>
     <string name="mention_field_hint">Replying to \@%1$s</string>
     <string name="quote_field_hint">Quoting from \@%1$s</string>
+
+    <string name="name_field_title">Name</string>
+    <string name="biography_field_title">Bio</string>
+    <string name="location_field_title">Location</string>
 
     <string name="sign_up_page">sign up</string>
     <string name="sign_in_page">sign in</string>
@@ -59,12 +63,11 @@
 
     <string name="tweet_successful">tweet sent successfully!</string>
     <string name="tweet_failed">sending tweet failed!</string>
+    <string name="profile_updated">profile updated successfully!</string>
 
     <string name="test_tweet_text">Welcome to my Twitter page! I\'m currently learning and exploring the fascinating world of Android Development. Having fun creating a RecyclerView to show different tweets. It\'s intriguing how you can bring your creative ideas to life with code. Stay tuned for more updates! #AndroidDev</string>
 
     <string name="follower_count"><b>%1$d</b> followers</string>
     <string name="following_count"><b>%1$d</b> followings</string>
-
-
 
 </resources>
