--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">My Application</string>
+    <string name="app_name">Twitter Clone</string>
     <string name="sign_in_button">sign in</string>
     <string name="sign_up_button">sign up</string>
     <string name="pick_date_button">birthdate</string>
